--- a/HTML/Index.html
+++ b/HTML/Index.html
@@ -4,7 +4,7 @@
 
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Feliz navidad</title>
     <link rel="stylesheet" type="text/css" href="../css/Style.css"/>
 </head>
 <body>
@@ -16,11 +16,11 @@
         </div>
         <div class="regalo2">
             <div><p id="P">Abre el regalo</p>
-                <a href="Index2.html"><img src="../img/Regalo.png" alt="Regalo que quiere que lo abras" ></a>
+                <a href="Index3.html"><img src="../img/Regalo.png" alt="Regalo que quiere que lo abras" ></a>
             </div>
             <div class="A">
                 <p>Abre el regalo</p>
-                <a href="Index2.html"><img src="../img/Regalo_O.png" alt="Regalo que quiere que lo abras" ></a>
+                <a href="Index4.html"><img src="../img/Regalo_O.png" alt="Regalo que quiere que lo abras" ></a>
             </div>
             
         </div>
