--- a/HTML/Index2.html
+++ b/HTML/Index2.html
@@ -4,7 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" type="text/css" href="../css/Style.css"/>
+    <link rel="stylesheet" type="text/css" href="../css/Style2.css"/>
+</head>
+<body>
+    <div class="principal">
+        <div class="titulo"><h1>Que todos tus deseos se hagan realidad en esta Navidad</h1></div>
 </head>
 <body>
     
