--- a/HTML/Index.html
+++ b/HTML/Index.html
@@ -10,6 +10,12 @@
 <body>
     <div class="principal">
         <div class="titulo"><h1>Feliz navidad</h1></div>
+        <div id="animacion">
+            <!-- Elemento que se animará -->
+            <div class="cuadrado"></div>
+            <!-- Imagen encima del cuadrado -->
+            <img src="../img/Papa_noel.png" alt="Imagen encima del cuadrado" class="imagen-superpuesta">
+        </div>
         <div class="regalo1">
             <p>Abre el regalo</p>
             <a href="Index2.html"><img src="../img/Regalo.png" alt="Regalo que quiere que lo abras"></a>
@@ -22,7 +28,6 @@
                 <p>Abre el regalo</p>
                 <a href="Index4.html"><img src="../img/Regalo_O.png" alt="Regalo que quiere que lo abras" ></a>
             </div>
-            
         </div>
     </div>
 </body>
