--- a/HTML/Index2.html
+++ b/HTML/Index2.html
@@ -11,7 +11,7 @@
         <div class="titulo"><h1>Que todos tus deseos se hagan realidad en esta Navidad</h1></div>
         <div class="regalo1">
             <p>Z E R O</p>
-            <a href="Index2.html"><img src="../img/DFBF3E36-7662-4382-9D2F-E074537F15C8.png" alt="Regalo que quiere que lo abras"></a>
+            <a href="Index2.html"><img src="../img/ZERO.png" alt="Regalo que quiere que lo abras"></a>
         </div>
 </head>
 <body>
