Auto stash before merge of "main" and "origin/main"

--- a/HTML/Index.html
+++ b/HTML/Index.html
@@ -14,7 +14,7 @@
             <!-- Elemento que se animará -->
             <div class="cuadrado"></div>
             <!-- Imagen encima del cuadrado -->
-            <img src="../img/Papa_noel.png" alt="Imagen encima del cuadrado" class="imagen-superpuesta">
+            <img src="../img/trineo.png" alt="Imagen encima del cuadrado" class="imagen-superpuesta">
         </div>
         <div class="regalo1">
             <p>Abre el regalo</p>
