--- a/HTML/Index2.html
+++ b/HTML/Index2.html
@@ -3,15 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Pesadilla</title>
     <link rel="stylesheet" type="text/css" href="../css/Style2.css"/>
 </head>
 <body>
     <div class="principal">
-        <div class="titulo"><h1>Que todos tus deseos se hagan realidad en esta Navidad</h1></div>
-        <div class="regalo1">
-            <p>Z E R O</p>
-            <a href="Index2.html"><img src="../img/ZERO.png" alt="Regalo que quiere que lo abras"></a>
+        <div class="titulo"><h1>Que todos tus deseos se hagan realidad, en esta Navidad</h1></div>
+        <div id="animacion">
+        <div class="cuadrado"></div>    
+        <img src="../img/ZERO.png" alt="Imagen encima del cuadrado" class="imagen-superpuesta">    
+        
         </div>
 </head>
 <body>
