--- a/HTML/Index2.html
+++ b/HTML/Index2.html
@@ -5,17 +5,58 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pesadilla</title>
     <link rel="stylesheet" type="text/css" href="../css/Style2.css"/>
-</head>
-<body>
-    <div class="principal">
-        <div class="titulo"><h1>Que todos tus deseos se hagan realidad, en esta Navidad</h1></div>
-        <div id="animacion">
-        <div class="cuadrado"></div>    
-        <img src="../img/ZERO.png" alt="Imagen encima del cuadrado" class="imagen-superpuesta">    
-        
-        </div>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.3.1/p5.min.js"></script>
 </head>
 <body>
     
+    <div class="principal">
+        <div class="titulo"><h1>Que todos tus deseos se hagan realidad, en esta Navidad</h1></div>
+        <div id="animacion">
+            <div class="cuadrado"></div>    
+            <img src="../img/ZERO.png" alt="Imagen encima del cuadrado" class="imagen-superpuesta">    
+        </div>
+    </div>
+
+    <script>
+        const CANTIDAD_COPOS = 1000
+        let copos = []
+
+        function setup() {
+            createCanvas(windowWidth, windowHeight)
+            for (let i = 0; i < CANTIDAD_COPOS; i++) {
+                copo = new Copo()
+                copo.y = random(-height, -document.querySelector(".titulo").offsetHeight) // Ajustar la posición inicial
+                copos.push(copo)
+            }
+        }
+
+        function windowResized(){
+            resizeCanvas(windowWidth, windowHeight)
+        }
+
+        function draw() {
+            clear()
+            for (const copo of copos) {
+                copo.dibujar()
+            }
+        }
+
+        function Copo() {
+            this.x = random(width)
+            this.y = random(-height, -document.querySelector(".titulo").offsetHeight) // Ajustar la posición inicial
+            this.dy = random(1, 6)
+            this.dibujar = function () {
+                stroke("white")
+                strokeWeight(this.dy)
+                point(this.x, this.y)
+                this.x += random(-1, 1)
+                this.y += this.dy
+                if (this.y > height) {
+                    this.y = random(-height, -document.querySelector(".titulo").offsetHeight); // Reiniciar en la parte superior del canvas
+                    this.x = random(width);
+                }
+            }
+        }
+    </script>
 </body>
 </html>
