--- a/HTML/Index2.html
+++ b/HTML/Index2.html
@@ -8,15 +8,14 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.3.1/p5.min.js"></script>
 </head>
 <body>
-    
     <div class="principal">
+        <audio src="../img/Jack.mp3" autoplay  preload="metadata" type="audio/mp3"></audio>
         <div class="titulo"><h1>Que todos tus deseos se hagan realidad, en esta Navidad</h1></div>
         <div id="animacion">
             <div class="cuadrado"></div>    
             <img src="../img/ZERO.png" alt="Imagen encima del cuadrado" class="imagen-superpuesta">    
         </div>
     </div>
-
     <script>
         const CANTIDAD_COPOS = 1000
         let copos = []
