--- a/HTML/Index3.html
+++ b/HTML/Index3.html
@@ -7,6 +7,8 @@
     <link rel="stylesheet" type="text/css" href="../css/style3.css"/>
 </head>
 <body>
-    
+    <div class="principal">
+        <div class="titulo"><h1>Y que puedas viajar a cualquier lado</h1></div>
+    </div>
 </body>
 </html>
