--- a/HTML/Index3.html
+++ b/HTML/Index3.html
@@ -9,6 +9,7 @@
 <body>
     <div class="principal">
         <div class="titulo"><h1>Y que puedas viajar a cualquier lado</h1></div>
+        <div class="img"><img src="../img/Regoku.png" alt=""></div>
     </div>
 </body>
 </html>
