--- a/HTML/Index4.html
+++ b/HTML/Index4.html
@@ -12,6 +12,9 @@
         <div id="uta"> 
             <iframe src="https://www.youtube.com/embed/kDKfVydaMw4?si=bcaEc4eQgttbenqp" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
         </div>
+        <div class="pinguino">
+            <img src="../img/pinguino.png" alt="">
+        </div>
     </div>
 </body>
 </html>
