--- a/HTML/Index.html
+++ b/HTML/Index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" type="text/css" href="../css/Style.css"/>
 </head>
 <body>
-    
+    <audio src="../img/Harry.mp3" autoplay  preload="metadata" type="audio/mp3"></audio>
     <div class="principal">
         <div class="titulo"><h1>Feliz navidad</h1></div>
         <div id="animacion">
